--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node -r tsconfig-paths/register build",
     "dev": "tsc-watch --onSuccess \"node -r tsconfig-paths/register build\"",
     "build": "tsc && prisma generate",
-    "vercel-build": "tsc && prisma generate && prisma migrate deploy",
+    "vercel-build": "echo hello",
     "prisma-generate": "prisma generate",
     "prisma-migrate": "prisma migrate dev --name update",
     "prisma-deploy": "prisma migrate deploy",
